syntax = "proto3";

package spine.test.base;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option (SPI_all) = true;
option java_package = "io.spine.test.base.rejections";

message FlyingObjectUnidentified {
    string plus_code = 1 [ (required) = true];
}
